# tetris-cpp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  build.py  conanfile.py
cmake/: fetched-libs.cmake
source/: game_state.cpp  game_state.hpp  main.cpp  renderer.cpp  renderer.hpp  tetris.cpp  tetris.hpp
source/async/: as_expected.hpp  async.hpp
source/tet/: block.cpp  block.hpp  common.hpp  game_state.cpp  game_state.hpp  renderer.cpp  renderer.hpp  tetris.cpp  tetris.hpp
source/tet/async/: async.hpp
source/util/: concepts.hpp  traits.hpp
test/: block_test.cpp
